# feeds

./: .gitignore  Makefile  PROGRESS.md  README.md  buf.gen.yaml  docker-compose.yml  go.work  go.work.sum  {username:hello}
.claude/: settings.local.json
configs/: otel-collector-config.yml  prometheus.yml
configs/grafana/: datasources.yml
docs/: kafka-architecture.md
pkg/: go.mod  go.sum
pkg/auth/: auth.go
pkg/comet/: business.go  conn.go  conn_manager.go  protocol.go  server.go
pkg/config/: config.go
pkg/events/: dispatcher.go  kafka.go
pkg/storage/: migrate.go  mysql.go  postgres.go  redis.go
pkg/telemetry/: telemetry.go
proto/: feed.proto  post.proto  user.proto
proto/comet/: comet.proto
proto/feed/: feed.proto
proto/interaction/: interaction.proto
proto/notify/: notify.proto
proto/user/: user.proto
services/comet/: Dockerfile  go.mod  go.sum  main.go
services/feed/: Dockerfile  go.mod  go.sum  main.go  model.go  repo.go  service.go
services/gateway/: Dockerfile  go.mod  go.sum  main.go
services/interaction/: Dockerfile  go.mod  go.sum  main.go  model.go  repo.go  service.go  storage.go
services/live/: Dockerfile  go.mod  main.go
services/notify/: Dockerfile  go.mod  go.sum  main.go  service.go  store.go
services/post/: Dockerfile  go.mod  main.go  model.go  repo.go  service.go
workers/: pyproject.toml
workers/common/: connections.py  consumer.py
workers/fanout/: Dockerfile  main.py
workers/handlers/: fanout.py  ranking.py
workers/notify/: notify_pb2.py  notify_pb2_grpc.py
workers/scripts/: gen_proto.sh
(+29 files in other folders)
