[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feeds-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "grpcio-tools>=1.60.0",
]

[project.scripts]
fanout = "fanout.main:main"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
